--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "license": "MIT",
   "dependencies": {
     "firebase": "^7.14.4",
+    "oboe": "^2.1.5",
     "parcel-bundler": "^1.12.4",
-    "react": "^16.13.1",
     "react-use": "^14.2.0"
   },
   "source": "src/GameProvider.jsx",
   "scripts": {
-    "build": "microbundle"
+    "build": "microbundle",
+    "postinstall": "npm run build"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1"
+  },
+  "devDependencies": {
+    "microbundle": "^0.12.0"
   }
 }
