--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "oboe": "^2.1.5",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
     "react-use": "^14.2.0"
   },
   "scripts": {
@@ -15,8 +16,6 @@
   },
   "devDependencies": {
     "husky": "^4.2.5",
-    "microbundle": "^0.12.0",
-    "rollup": "^2.12.0",
     "sass": "^1.26.7"
   },
   "husky": {
