--- a/package.json
+++ b/package.json
@@ -18,20 +18,16 @@
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-typescript2": "^0.27.1",
     "rollup-plugin-url": "^3.0.1",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "sass": "^1.26.7"
   },
   "scripts": {
     "install": "rollup -c"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@rollup/plugin-replace": "^2.2.0",
-    "husky": "^4.2.5",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "sass": "^1.26.7"
+    "husky": "^4.2.5"
   },
   "peerDependencies": {
     "@types/react": "^16.9.24",
